--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	   </p>
 	   <h2>What I'm working on</h2>
 	   <p>
-	        I'm obsessed with AI right now and I'm working on the internal workings of GECS. 
+	        I'm obsessed with AI right now and I'm working on the internal workings of python. 
 	   </p>
 	</body>
 </html>
